2005-06-27  Luca Ognibene  <luogni@tin.it>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_loop):
	timestamp is a GstClockTime, not a double..
	fix #309149 and maybe others bug

2005-06-27  Daniel Fischer  <dan@f3c.com>

	reviewed by: Luca Ognibene <luogni@tin.it>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_loop):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_chain_video):
	more DELTA_UNIT / KEY_UNIT fixes

2005-06-27  Daniel Fischer  <dan@f3c.com>

	reviewed by: Luca Ognibene <luogni@tin.it>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_formatid_to_caps),
	(gst_ffmpeg_formatid_get_codecids), (gst_ffmpeg_caps_to_codecid):
	add flv encoder
	
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_frame):
	set both DELTA_UNIT and KEY_UNIT
	
	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_loop):
	use DELTA_UNIT and not the deprecated KEY_UNIT

2005-06-25  Luca Ognibene  <luogni@tin.it>

	* ext/libpostproc/gstpostproc.c: (gst_ffmpeg_log_callback),
	(plugin_init):
	* ext/libpostproc/gstpostproc.h:
	fix debug output

2005-06-25  Sebastien Cote <sc5@hermes.usherb.ca>

	Reviewed by: Luca Ognibene <luogni@tin.it>
	
	* ext/ffmpeg/gstffmpegenc.c (gst_ffmpegenc_chain_video): 
	set the GST_BUFFER_DELTA_UNIT while encoding
	fix #308804

2005-06-20  Edward Hervey  <edward@fluendo.com>

	* ext/libpostproc/gstpostproc.c: (gst_postproc_register):
	It works better when filing the hash_table BEFORE registering the element.
	
2005-06-20  Edward Hervey  <edward@fluendo.com>

	* ext/Makefile.am: (SUBDIRS):
	* ext/libpostproc:
	* ext/libpostproc/Makefile.am:
	* ext/libpostproc/gstpostproc.c:
	* ext/libpostproc/gstpostproc.h:
	ffmpeg's libpostproc wrapper plugins

	* configure.ac: 
	added --enable-pp to ffmpeg configure arguments

2005-06-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	  Dev mode.

=== release 0.8.5 ===

2005-06-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* NEWS:
	* RELEASE:
	* TODO:
	* configure.ac: